--- a/PCCleaner/Properties/Resources.resx
+++ b/PCCleaner/Properties/Resources.resx
@@ -436,4 +436,7 @@
   <data name="Registry_Left" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\registry_left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Exe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\exe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
